grammar.js
    script_file: ($) => optional($._separated_statements),

    _separated_statements: ($) =>
      repeat1(seq(optional($._statement), $._cmd_separator)),

    _statement: ($) =>
      seq(
        repeat(":"),
        choice(
          $.function_definition,
          $.let_statement,
          $.unlet_statement,
          $.const_statement,
          $.set_statement,
          $.setlocal_statement,
          $.return_statement,
          $.normal_statement,
          $.while_loop,
          $.for_loop,
          $.if_statement,
          $.lua_statement,
          $.range_statement,
          $.ruby_statement,
          $.python_statement,
          $.perl_statement,
          $.call_statement,
          $.execute_statement,
          $.echo_statement,
          $.echon_statement,
          $.echohl_statement,
          $.echomsg_statement,
          $.echoerr_statement,
          $.try_statement,
          $.throw_statement,
          $.autocmd_statement,
          $.silent_statement,
          $.register_statement,
          $.map_statement,
          $.augroup_statement,
          $.bang_filter_statement,
          $.highlight_statement,
          $.syntax_statement,
          $.setfiletype_statement,
          $.options_statement,
          $.startinsert_statement,
          $.stopinsert_statement,
          $.scriptencoding_statement,
          $.source_statement,
          $.global_statement,
          $.colorscheme_statement,
          $.command_statement,
          $.comclear_statement,
          $.delcommand_statement,
          $.filetype_statement,
          $.runtime_statement,
          $.wincmd_statement,
          $.sign_statement,
          $.break_statement,
          $.continue_statement,
          $.cnext_statement,
          $.cprevious_statement,
          $.unknown_builtin_statement,
          $.user_command
        )
      ),

    scriptencoding_statement: ($) =>
      command($, "scriptencoding", optional($.encoding)),

    command_name: ($) => /[A-Z][A-Za-z0-9]*/,

    _runtime_where: ($) => choice("START", "OPT", "PACK", "ALL"),
    runtime_statement: ($) =>
      seq(
        maybe_bang($, tokalias($, "runtime")),
        optional(alias($._runtime_where, $.where)),
        alias(repeat1($.filename), $.filenames)
      ),

    global_statement: ($) =>
      seq(
        maybe_bang($, tokalias($, "global")),
        $._separator_first,
        $.pattern,
        $._separator,
        $._statement
      ),

    lua_statement: ($) => command($, "lua", choice($.chunk, $.script)),
    chunk: ($) => /<|(<[^\n<]|[^\s<])[^\n]*/,

    for_loop: ($) =>
      seq(
        tokalias($, "for"),
        field("variable", choice($._ident, $.list_assignment)),
        "in",
        field("iter", $._expression),
        alias(optional($._separated_statements), $.body),
        tokalias($, "endfor")
      ),

    autocmd_statement: ($) =>
      seq(
        maybe_bang($, tokalias($, "autocmd")),
        optional(alias($.identifier, $.augroup_name)),
        optional(
          seq(
            $.au_event_list,
            commaSep1(alias(/[^ \t\n,]+/, $.pattern)),
            optional("++once"),
            optional("++nested"),
            field("command", $._statement)
          )
        )
      ),

    augroup_statement: ($) =>
      seq(
        maybe_bang($, tokalias($, "augroup")),
        alias($.identifier, $.augroup_name)
      ),

    au_event: ($) => /[A-Z][a-zA-Z]+/,
    au_event_list: ($) => commaSep1($.au_event),

    // :h filter
    _curly_braces_name_expression: ($) => seq("{", $._expression, "}"),
    _immediate_curly_braces_name_expression: ($) =>
      seq(token.immediate("{"), $._expression, "}"),
    identifier: ($) =>
      seq(
        choice(
          /[a-zA-Z_]+/,
          alias($._curly_braces_name_expression, $.curly_braces_name)
        ),
        repeat(
          choice(
            token.immediate(/(\w|#)+/),
            alias(
              $._immediate_curly_braces_name_expression,
              $.curly_braces_name
            )
          )
        )
      ),
    _ident: ($) => choice($.scoped_identifier, $.identifier, $.argument),

    option_name: ($) => choice(/[a-z]+/, seq("t_", /[a-zA-Z0-9]+/)),

    _set_option: ($) =>
      choice(
        "all",
        "all&",
        $.option_name,
        seq($.option_name, "?"),
        $.no_option,
        $.inv_option,
        $.default_option
      ),

    _set_rhs: ($) =>
      seq($._set_operator, optional(field("value", $.set_value))),

    set_item: ($) => seq(field("option", $._set_option), optional($._set_rhs)),

    set_statement: ($) => set_variant($, "set"),
    echo_statement: ($) => echo_variant($, "echo"),
    echomsg_statement: ($) => echo_variant($, "echomsg"),
    command_argument: ($) => choice($.string_literal, /\S+/),

    bang: ($) => token.immediate("!"),

    hl_group: ($) => /[a-zA-Z0-9_]+/,

    _hl_key_cterm: ($) => hl_key_val("cterm", $._hl_attr_list),

    _hl_key_start_stop: ($) =>
      hl_key_val(choice("start", "stop"), $._hl_term_list),

    _hl_key_ctermfg_ctermbg: ($) =>
      hl_key_val(
        choice("ctermfg", "ctermbg"),
        choice($._hl_color_name, $._hl_color_nr)
      ),

    _hl_key_gui: ($) => hl_key_val("gui", $._hl_attr_list),

    _hl_key_gui_color: ($) =>
      hl_key_val(choice("guifg", "guibg", "guisp"), $._hl_color_name),

    _hl_key_font: ($) =>
      hl_key_val(
        "font",
        choice(token.immediate(/[a-zA-Z0-9-]+/), $._hl_quoted_name)
      ),

    hl_attribute: ($) =>
      choice(
        $._hl_key_cterm,
        $._hl_key_start_stop,
        $._hl_key_ctermfg_ctermbg,
        $._hl_key_gui,
        $._hl_key_gui_color,
        $._hl_key_font
      ),

    _hl_body: ($) =>
      choice(
        $._hl_body_clear,
        $._hl_body_none,
        $._hl_body_keys,
        $._hl_body_link
      ),

    highlight_statement: ($) =>
      seq(maybe_bang($, tokalias($, "highlight")), optional($._hl_body)),

    // :h :syntax
    _sign_define: ($) =>
      sub_cmd(
        "define",
        field("name", $._sign_name),
        repeat(alias($._sign_define_argument, $.sign_argument))
      ),

    _sign_undefine: ($) => sub_cmd("undefine", field("name", $._sign_name)),

    _sign_list: ($) => sub_cmd("list", optional(field("name", $._sign_name))),

    // :h sign-place
    _sign_place: ($) =>
      sub_cmd("place", choice($._sign_place_place, $._sign_place_list)),

    _sign_unplace: ($) =>
      sub_cmd(
        "unplace",
        optional(choice($._sign_unplace_cursor, $._sign_unplace_id))
      ),

    _sign_jump: ($) =>
      sub_cmd(
        "jump",
        field("id", choice($.integer_literal, alias("*", $.wildcard))),
        repeat(alias($._sign_jump_argument, $.sign_argument))
      ),

    sign_statement: ($) =>
      seq(
        tokalias($, "sign"),
        choice(
          $._sign_define,
          $._sign_undefine,
          $._sign_list,
          $._sign_place,
          $._sign_unplace,
          $._sign_jump
        )
      ),

    // :h variable
    _expression: ($) =>
      choice(
        $._variable,
        $.ternary_expression,
        $.index_expression,
        $.slice_expression,
        $.binary_operation,
        seq("(", $._expression, ")"),
        $.unary_operation,
        $.field_expression,
        $.call_expression
      ),

    integer_literal: ($) =>
      token(
        seq(
          optional(/[-+]/),
          choice(
            seq(choice("0x", "0X"), /[A-Fa-f0-9]+/),
            seq(choice("0", "0"), /[0-7]+/),
            seq(choice("0b", "0B"), /[0-1]+/),
            /[0-9]+/
          )
        )
      ),

    list: ($) => seq("[", commaSep($._expression), optional(","), "]"),
    // Trailing commas are not allowed in assignments, but `; <ident>` are
    list_assignment: ($) =>
      seq("[", commaSep($._expression), optional(seq(";", $._expression)), "]"),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("function", $._expression),
          "(",
          optional(commaSep1($._expression)),
          ")"
        )
      ),

    // Use default :h isfname
    filename: ($) =>
      seq(
        // First character of a filename is not immediate
        choice(
          /[A-Za-z0-9]/,
          /[/._+,#$%~=-]/,
          // Include windows characters
          /[\\{}\[\]:@!]/,
          // Allow wildcard
          /[*]/,
          // Escaped character
          seq("\\", /./)
        ),
        repeat(
          choice(
            ...[
              /[A-Za-z0-9]/,
              /[/._+,#$%~=-]/,
              // Include windows characters
              /[\\{}\[\]:@!]/,
              // Allow wildcard
              /[*]/,
              // Escaped character
              seq("\\", /./),
            ].map(token.immediate)
          )
        )
      ),

    // :h pattern
    _pattern_branch: ($) => sep1($._pattern_concat, "\\&"),

    pattern: ($) => prec.left(sep1($._pattern_branch, "\\|")),
