corpus/augroup_statement.txt
================================================================================
Simple augroup
================================================================================

augroup test

--------------------------------------------------------------------------------

(script_file
  (augroup_statement
    (augroup_name)))

================================================================================
Augroup bang
================================================================================

augroup! test

--------------------------------------------------------------------------------

(script_file
  (augroup_statement
    (bang)
    (augroup_name)))
