corpus/autocmd.txt
================================================================================
Basic autocommand
================================================================================

autocmd TabClosed * lua require'bang'

--------------------------------------------------------------------------------

(script_file
  (autocmd_statement
    (event)
    (pattern)
    (lua_statement
      (chunk))))
