corpus/comments.txt
================================================================================
Basic comment
================================================================================

" Hello

--------------------------------------------------------------------------------

(script_file
  (comment))

================================================================================
Comment after statement
================================================================================

echo "bar" " Hello

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (string_literal)
    (comment)))

================================================================================
Comment with inner quotes
================================================================================

" 'hello'

--------------------------------------------------------------------------------

(script_file
  (comment))

================================================================================
Comment with inner double quotes
================================================================================

" "hello"

--------------------------------------------------------------------------------

(script_file
  (comment))

================================================================================
Set then comment
================================================================================

set foobar " comment

--------------------------------------------------------------------------------

(script_file
  (set_statement
    (set_item
      (option_name))
    (comment)))
