corpus/echo.txt
================================================================================
Simple echo
================================================================================

echo "Test"

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (string_literal)))

================================================================================
Echo with multiple arguments
================================================================================

echo "Test1" "Test2"

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (string_literal)
    (string_literal)))

================================================================================
Echo with expression
================================================================================

echo printf("Foobar")

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (call_expression
      (identifier)
      (string_literal))))

================================================================================
Echo with multiple expressions
================================================================================

echo printf("foo") printf("bar")

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (call_expression
      (identifier)
      (string_literal))
    (call_expression
      (identifier)
      (string_literal))))

================================================================================
Partial echo
================================================================================

ec "bleh"

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (string_literal)))

================================================================================
echomsg with arguments
================================================================================

echomsg "foobar"

--------------------------------------------------------------------------------

(script_file
  (echomsg_statement
    (string_literal)))

================================================================================
echo curly-braces
================================================================================

echo my_{adverb}_{adjective}_message
echo my_{ad{end_of_word}}_message
echo {foo}bar
echo baz{foo}
echo {foo}
echo c{foo}d

--------------------------------------------------------------------------------

(script_file
  (echo_statement
    (identifier
      (identifier)
      (identifier)))
  (echo_statement
    (identifier
      (identifier
        (identifier))))
  (echo_statement
    (identifier
      (identifier)))
  (echo_statement
    (identifier
      (identifier)))
  (echo_statement
    (identifier
      (identifier)))
  (echo_statement
    (identifier
      (identifier))))
