corpus/scan_separator.txt
================================================================================
Simple global
================================================================================

g/abc/echo "foo"

g|abc|echo "foo"

--------------------------------------------------------------------------------

(script_file
  (global_statement
    (echo_statement
      (string_literal)))
  (global_statement
    (echo_statement
      (string_literal))))
