corpus/shell_command_statement.txt
================================================================================
Shell command
================================================================================

!mkdir
!mkdir -p
!mkdir "not a vim comment

--------------------------------------------------------------------------------

(script_file
  (shell_command_statement
    (bang)
    (command))
  (shell_command_statement
    (bang)
    (command))
  (shell_command_statement
    (bang)
    (command)))

================================================================================
Shell command repeat
================================================================================

!!

--------------------------------------------------------------------------------

(script_file
  (shell_command_statement
    (bang)
    (bang)))

================================================================================
Shell command pipe goes to shell
================================================================================

!ls | grep tata

--------------------------------------------------------------------------------

(script_file
  (shell_command_statement
    (bang)
    (command)))
